--- a/subfiles/introduction.tex
+++ b/subfiles/introduction.tex
@@ -1,5 +1,23 @@
 \documentclass[../document.tex]{subfiles}
 
 \begin{document}
-    \par В современной разработке программного обеспечения исходный код является ключевым активом, требующим эффективного анализа и обработки. С ростом сложности программных систем и увеличением объёмов кодовой базы традиционные методы анализа кода сталкиваются с рядом ограничений, связанных с масштабируемостью и точностью. В таких задачах, как автоматическое обнаружение уязвимостей, рефакторинг, поиск семантически схожих фрагментов кода и предсказание дефектов, критически важным становится наличие качественного признакового представления исходного кода, которое могло бы быть использовано в downstream-моделях машинного обучения.
+    \section*{Введение}
+    \par В современной разработке программного обеспечения исходный код является ключевым ресурсом, требующим эффективного анализа и обработки. С ростом сложности программных систем и увеличением объёмов кодовой базы традиционные методы анализа кода сталкиваются с рядом ограничений, связанных с масштабируемостью и точностью. В таких задачах, как автоматическое обнаружение уязвимостей, рефакторинг, поиск семантически схожих фрагментов кода и предсказание дефектов, критически важным становится наличие качественного признакового представления исходного кода, которое могло бы быть использовано в downstream-моделях машинного обучения.
+    \subsection*{Актуальность задачи}
+    \begin{enumerate}
+        \item #TODO Актуальность задачи
+    \end{enumerate}
+    \subsection*{Цель работы}
+    \par Адаптация алгоритма \gls{dino} для извлечения признаковых представлений исходного кода и сравнительный анализ его эффективности с готовыми моделями (CodeBERT) на downstream-задачах, таких как классификация кода.
+    \subsection*{Задачи исследования}
+    \begin{enumerate}
+        \item Провести обзор современных методов представления исходного кода и алгоритмов самообучения (self-supervised learning).
+        \item Модифицировать алгоритм \gls{dino} для работы с текстовыми данными.
+        \item Собрать и предобработать датасеты для обучения и оценки моделей.
+        \item Обучить модель на основе адаптированного \gls{dino} и сравнить её с существующими решениями и проанализировать результаты.
+    \end{enumerate}
+    \subsection*{Структура работы}
+    % \begin{enumerate}
+        % #TODO Структура работы
+    % \end{enumerate}
 \end{document}
