Написанна основная часть диплома

--- a/document.tex
+++ b/document.tex
@@ -47,6 +47,13 @@
 % \newacronym{mpe}{МПУ}{Модовое Параболическое Уравнение}
 \newglossaryentry{dino}{name=DINO, description = (Distillation with No Labels)}
 \newacronym{ml}{ML}{Машинное обучение}
+\newacronym{nn}{NN}{Neural Network}
+\newacronym{nlp}{NLP}{Natural Language Processing}
+\newacronym{mlm}{MLM}{Masked Language Modeling}
+\newacronym{rtd}{RTD}{Replaced Token Detection}
+\newacronym{ssl}{SSL}{Self Supervised Learning}
+\newacronym{ff}{FF}{Feature Extraction}
+
 
 \begin{document}
 
@@ -61,9 +68,14 @@
     \subfile{subfiles/introduction.tex}
     \newpage
     \subfile{subfiles/part_1.tex}
-
+    \newpage
+    \subfile{subfiles/part_2.tex}
+    \newpage
+    \subfile{subfiles/part_3.tex}
+    \newpage
+    \subfile{subfiles/result.tex}
     % \newpage
-    % % \printglossary[type=\acronymtype,title={Глоссарий}]
+    % \printglossary[type=\acronymtype,title={Глоссарий}]
     % \newpage
     % % \subfile{subfiles/subject.tex}
     % \newpage
@@ -72,9 +84,11 @@
     % % \subfile{subfiles/program.tex}
     % \newpage
     % % \subfile{subfiles/conclusion.tex}
-    % \newpage
-    \printbibliography
+    % \printbibliography
     % \newpage
     
     % \subfile{subfilesd/appendices.tex}
+    \newpage
+     \cite{codeforcesyoink}
+    \printbibliography
 \end{document}
