--- a/references.bib
+++ b/references.bib
@@ -4,5 +4,60 @@
     title={Emerging Properties in Self-Supervised Vision Transformers}, 
     year={2021},
     url={https://arxiv.org/abs/2104.14294},    
-    urldate      = {2025-05-18},
+    urldate      = {2025-02-18},
+}
+@article{guo2022unixcoder,
+  language     = {english},
+  title={UniXcoder: Unified Cross-Modal Pre-training for Code Representation},
+  author={Guo, Daya and Lu, Shuai and Duan, Nan and Wang, Yanlin and Zhou, Ming and Yin, Jian},
+  journal={arXiv preprint arXiv:2203.03850},
+  year={2022},
+  urldate      = {2025-03-11},
+}
+@misc{feng2020codebertpretrainedmodelprogramming,
+  language     = {english},
+      title={CodeBERT: A Pre-Trained Model for Programming and Natural Languages}, 
+      author={Zhangyin Feng and Daya Guo and Duyu Tang and Nan Duan and Xiaocheng Feng and Ming Gong and Linjun Shou and Bing Qin and Ting Liu and Daxin Jiang and Ming Zhou},
+      year={2020},
+      eprint={2002.08155},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2002.08155}, 
+      urldate      = {2025-03-11},
+}
+@misc{dao2022flashattentionfastmemoryefficientexact,
+      language     = {english},
+      title={FlashAttention: Fast and Memory-Efficient Exact Attention with IO-Awareness}, 
+      author={Tri Dao and Daniel Y. Fu and Stefano Ermon and Atri Rudra and Christopher Ré},
+      year={2022},
+      eprint={2205.14135},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/2205.14135}, 
+}
+@misc{codeforcesyoink,
+  author={yolomachine},
+  title = {CodeforcesYoink},
+  url={https://github.com/yolomachine/CodeforcesYoink},
+  year={2021},
+  urldate      = {2025-02-21},
+}
+@misc{puri2021codenetlargescaleaicode,
+      language     = {english},
+      title={CodeNet: A Large-Scale AI for Code Dataset for Learning a Diversity of Coding Tasks}, 
+      author={Ruchir Puri and David S. Kung and Geert Janssen and Wei Zhang and Giacomo Domeniconi and Vladimir Zolotov and Julian Dolby and Jie Chen and Mihir Choudhury and Lindsey Decker and Veronika Thost and Luca Buratti and Saurabh Pujar and Shyam Ramji and Ulrich Finkler and Susan Malaika and Frederick Reiss},
+      year={2021},
+      eprint={2105.12655},
+      archivePrefix={arXiv},
+      primaryClass={cs.SE},
+      url={https://arxiv.org/abs/2105.12655}, 
+}
+@misc{sinha2021maskedlanguagemodelingdistributional,
+      title={Masked Language Modeling and the Distributional Hypothesis: Order Word Matters Pre-training for Little}, 
+      author={Koustuv Sinha and Robin Jia and Dieuwke Hupkes and Joelle Pineau and Adina Williams and Douwe Kiela},
+      year={2021},
+      eprint={2104.06644},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2104.06644}, 
 }
