--- a/subfiles/part_1.tex
+++ b/subfiles/part_1.tex
@@ -22,5 +22,7 @@
 
     
     \subfile{part_1/deep_learning.tex}
-    
+    \subfile{part_1/nlp.tex}
+    \subfile{part_1/codebert.tex}
+    \subfile{part_1/dino.tex}
 \end{document}
