--- a/subfiles/part_1/reinforcement_learning.tex
+++ b/subfiles/part_1/reinforcement_learning.tex
@@ -7,13 +7,13 @@
     \par В отличии от прошлых методов, агенты ориентированы на последовательное принятие решений в условиях неопредленности.
     \par Основное преимущество обучения с подкреплением:
     \begin{itemize}
-        \item \textbf{Подходит для задач с отложенной наградой} -- Может учитывать долгосрочные последствия действий, а не только мгновенную выгоду.
-        \item \textbf{Возможность обучения без размеченных данных} -- Не требует готовых "правильных ответов".
+        \item \textit{Подходит для задач с отложенной наградой} -- Может учитывать долгосрочные последствия действий, а не только мгновенную выгоду.
+        \item \textit{Возможность обучения без размеченных данных} -- Не требует готовых "правильных ответов".
     \end{itemize}
     \par Основные недостатки обучения с подкреплением:
     \begin{itemize}
-        \item \textbf{Высокие вычислительные затраты} -- Требует миллионов (иногда миллиардов) попыток для обучения.
-        \item \textbf{Проблема исследования-эксплуатации} -- Агент должен балансировать между исследованием и эксплуатацией. Исследование -- проба новых действий, для поиска лучшей стратегии. Эксплуатация -- использование уже известных лучших действий.
+        \item \textit{Высокие вычислительные затраты} -- Требует миллионов (иногда миллиардов) попыток для обучения.
+        \item \textit{Проблема исследования-эксплуатации} -- Агент должен балансировать между исследованием и эксплуатацией. Исследование -- проба новых действий, для поиска лучшей стратегии. Эксплуатация -- использование уже известных лучших действий.
     \end{itemize}
     \par Пример модлей которые обучаются с помощью обучения с учителем:
     \begin{itemize}
