--- a/subfiles/part_1/study_without_teacher.tex
+++ b/subfiles/part_1/study_without_teacher.tex
@@ -6,20 +6,20 @@
     \par Обучение без учителя --  это вид машинного обучения, при котором модель обучается на примерах для которых нет какой-либо разметки. Цель такого метода обучения -- построение модели которая сама будет находить закономерности, не опираясь на внешние подсказки. 
     \par Задачи обучения без учителя включают в себя:
     \begin{itemize}
-        \item \textbf{Кластеризацию} -- задача разделения объектов на группы, которые имеют сходство между собой и отличаются от других.
-        \item \textbf{Снижение размерности} -- задача уменьшение количества признаков данных, сохраняя при этом информацию об объекте.
-        \item \textbf{Поиск ассоциативных правил} -- задача выявления устойчивых взаимосвязей между событиями в больших данных.
-        \item \textbf{Генеративные модели} -- задача генерации новых данных похожих на тренировочные.
+        \item \textit{Кластеризацию} -- задача разделения объектов на группы, которые имеют сходство между собой и отличаются от других.
+        \item \textit{Снижение размерности} -- задача уменьшение количества признаков данных, сохраняя при этом информацию об объекте.
+        \item \textit{Поиск ассоциативных правил} -- задача выявления устойчивых взаимосвязей между событиями в больших данных.
+        \item \textit{Генеративные модели} -- задача генерации новых данных похожих на тренировочные.
     \end{itemize}
     \par Основное преимущество обучения без учителем:
     \begin{itemize}
-        \item \textbf{Не требуется разметка данных} -- работа с неразмеченными данными значительно облегчает процесс сбора данных.
+        \item \textit{Не требуется разметка данных} -- работа с неразмеченными данными значительно облегчает процесс сбора данных.
         \item \textbf{Гибкость и универсальность} -- применимо в разнообразных областях, а так же может использоваться для предобработки данных перед обучением с учителем
     \end{itemize}
     \par Основные недостатки обучения без учителем:
     \begin{itemize}
-        \item \textbf{Сложность оценки качества} -- отсутсвие разметки затрудняет объективную оценку результатов.
-        \item \textbf{Проблема интерпретируемости} -- так как пространство выходных значений не известно, сложно их интерпретировать. 
+        \item \textit{Сложность оценки качества} -- отсутсвие разметки затрудняет объективную оценку результатов.
+        \item \textit{Проблема интерпретируемости} -- так как пространство выходных значений не известно, сложно их интерпретировать. 
     \end{itemize}
     \par Пример модлей которые обучаются с помощью обучения с учителем:
     \begin{itemize}
