--- a/subfiles/introduction.tex
+++ b/subfiles/introduction.tex
@@ -4,7 +4,7 @@
     \section*{Введение}
     \par В современной разработке программного обеспечения исходный код является ключевым ресурсом, требующим эффективного анализа и обработки. С ростом сложности программных систем и увеличением объёмов кодовой базы традиционные методы анализа кода сталкиваются с рядом ограничений, связанных с масштабируемостью и точностью. В таких задачах, как автоматическое обнаружение уязвимостей, рефакторинг, поиск семантически схожих фрагментов кода и предсказание дефектов, критически важным становится наличие качественного признакового представления исходного кода, которое могло бы быть использовано в downstream-моделях машинного обучения.
     \subsection*{Актуальность задачи}
-    \par По мере роста объемов разработки ПО и старения кодовой базы корпоративных приложений, повышение продуктивности разработки и модернизация устаревших систем становятся критически важными задачами. остижения в области глубокого обучения и машинного обучения уже привели к прорывам в компьютерном зрении, распознавании речи, обработке естественного языка и других областях, что вдохновило исследователей применять методы ИИ для повышения эффективности разработки программного обеспечения. Это способствовало стремительному развитию нового направления исследований - "ИИ для программирования". 
+    \par По мере роста объемов разработки ПО и старения кодовой базы корпоративных приложений, повышение продуктивности разработки и модернизация устаревших систем становятся критически важными задачами. Достижения в области глубокого обучения и машинного обучения уже привели к прорывам в компьютерном зрении, распознавании речи, обработке естественного языка и других областях, что вдохновило исследователей применять методы ИИ для повышения эффективности разработки программного обеспечения. Это способствовало стремительному развитию нового направления исследований - "ИИ для программирования". 
     \subsection*{Цель работы}
     \par Адаптация алгоритма \gls{dino} для извлечения признаковых представлений исходного кода и сравнительный анализ его эффективности с готовыми моделями (CodeBERT, UnixCoder) на downstream-задачах, таких как классификация кода.
     \subsection*{Задачи исследования}
