--- a/subfiles/part_1/codebert.tex
+++ b/subfiles/part_1/codebert.tex
@@ -17,15 +17,15 @@
 \end{figure}
 \par На рисунке \ref{fig:mlm_bert} изображен классический процесс маскированного языкового моделирования. Обучение происходит в 3 шага:
 \begin{enumerate}
-    \item Маскирование -- выбирается случайное количество токенов. Из них большая часть заменяется на токен [MASK], а оставшиеся либо не меняются либо заменяются на случайное слово
-    \item Предсказание -- модель анализирует конекст вокруг маски и вычисляет вероятность токенов кандидатов.
+    \item Маскирование -- выбирается случайное количество токенов. Из них большая часть заменяется на токен [MASK], а оставшиеся либо не меняются, либо заменяются на случайное слово
+    \item Предсказание -- модель анализирует контекст вокруг маски и вычисляет вероятность токенов кандидатов.
     \item Функция потерь -- ошибка считается только для замаскированных позиций.
 \end{enumerate}
 \par Почему же используют \acrshort{mlm}
 \begin{itemize}
-    \item Контекстное обучение -- модель учится находить взаямосвязи токенов, а не только статистику.
+    \item Контекстное обучение -- модель учится находить взаимосвязи токенов, а не только статистику.
     \item Универасальность -- подходит для любых последовательностей, не требуя разметку.
-    \item Подготовка к downstream-задачам -- навык востановления конеткста полезно для автопродления текста или же исправления ошибок.
+    \item Подготовка к downstream-задачам -- навык востановления контекста полезно для автопродления текста или же исправления ошибок.
 \end{itemize}
 
 \subsubsection{Обнаружения заменённых токенов}
@@ -41,7 +41,7 @@
 \par На рисунке \ref{fig:rtd_bert} изображен классический процесс обучения модели через задачу обнаружения заменённых токенов. Обучение происходит в 3 шага:
 \begin{enumerate}
     \item Замена токенов -- маленькая модель генератора заменяет токены на новые, схожие по смыслу. К примеру running заменится на jogging 
-    \item Предсказание -- модель анализирует конекст вокруг замены выявить является ли токен замененным.
+    \item Предсказание -- модель анализирует контекст вокруг замены выявить является ли токен замененным.
     \item Функция потерь -- ошибка считается для замененных токенов и оригинальных.
 \end{enumerate}
 \par Почему же используют \acrshort{rtd}
