--- a/subfiles/part_1/deep_learning.tex
+++ b/subfiles/part_1/deep_learning.tex
@@ -3,13 +3,13 @@
 \begin{document}
 \subsection{Глубокое обучение}
 \par Глубокое обучение -- это подраздел машинного обучения, основанный на использовании искусственных нейронных сетей (\acrshort{nn}). Эти модели способны автоматически извлекать признаки из данных, имитируя работу человеческого мозга в упрощённой форме.
-\par Свое название оно получило благодаря многослойной архитектуре нейронных сетей, что позволяет моделям находить более сложные закономерности. Например в задаче классификации изображений первый слой находит базовые признаки, такие как края и прямые линии. Второй слой используя уже обработанные данные находит углы. Таким обазом при достаточном количестве слоев нейронная сеть сможет отличать котов от собак. 
+\par Свое название оно получило благодаря многослойной архитектуре нейронных сетей, что позволяет моделям находить более сложные закономерности. Например, в задаче классификации изображений первый слой находит базовые признаки, такие как края и прямые линии. Второй слой используя уже обработанные данные находит углы. Таким образом при достаточном количестве слоев нейронная сеть сможет отличать котов от собак. 
 \par К сожалению у нейронных сетей есть и недостатки:
 \begin{itemize}
     \item \textit{Сложность интерпретации} -- так как \acrshort{nn} работает как "черный ящик" (мы знаем вход и выходи модели, но не знаем что происходит внутри).
     \item \textit{Вычислительная сложность} -- современные архитектуры могут иметь миллионы и миллиарды параметров, которые необходимо хранить в оперативной памяти.
 \end{itemize}
-\par В настоящее время глубокое обучение стало неотъемлимой частью нашей жизни. Благодаря нему работают голосовые помошники, системы рекомендаций и системы распознавания лиц.
+\par В настоящее время глубокое обучение стало неотъемлемой частью нашей жизни. Благодаря ему работают голосовые помощники, системы рекомендаций и системы распознавания лиц.
 \par Основные направления в которых применяют глубокое обучение:
 \begin{itemize}
     \item \textit{Компьютерное зрение} -- Детекция объектов, классификация и генерация изображений.
