--- a/subfiles/part_1/dino.tex
+++ b/subfiles/part_1/dino.tex
@@ -3,18 +3,18 @@
 \begin{document}
     \subsubsection{DINO}
 
-    \par Интуитивно кажется что решение задачи \acrshort{mlm} не способствует тому что модель будте понимать структуру кода или какие-либо отличительные черты. 
-    \par В ходе исследования внимание было обращено внимание на метод обучения \acrshort{dino}\cite{caron2021emergingpropertiesselfsupervisedvision} разработанный FacebookResearch. Он позволяет эффективно обучать модели на изображениях без разметки, извлекая универсальные визуальные представления. 
+    \par Интуитивно кажется что решение задачи \acrshort{mlm} не способствует тому что модель будет понимать структуру кода или какие-либо отличительные черты. 
+    \par В ходе исследования внимание было обращено внимание на метод обучения \acrshort{dino}\cite{caron2021emergingpropertiesselfsupervisedvision}\cite{oquab2024dinov2learningrobustvisual}\cite{darcet2024visiontransformersneedregisters} разработанный FacebookResearch. Он позволяет эффективно обучать модели на изображениях без разметки, извлекая универсальные визуальные представления. 
     \par Ключевая идея \acrshort{dino} — обучение через "самодистилляцию", когда модель учится согласовывать разные измененные версии одного изображения, не требуя предварительно размеченных данных.
-    \par Для обучения исопльзуется две модели -- учитель и ученик. Учитель генерирует эталонные представления изображения, тогда как ученик пытается предсказать выход учителя. 
-    \par В процессе обучения изображения разделяются на участки. Сначала из изображения выделяются два глобальных участка(изображение включающее 90\% исходного). Затем из изображения выделяются шесть локальных участков (изображения включающие около 15\% исходного). После этого к каждому набору учатско применяются аугментации(например отражение, изменене цветов и так далее) и глобальные участи передаются в учителя, а локальные в ученика.
+    \par Для обучения используется две модели -- учитель и ученик. Учитель генерирует эталонные представления изображения, тогда как ученик пытается предсказать выход учителя. 
+    \par В процессе обучения изображения разделяются на участки. Сначала из изображения выделяются два глобальных участка(изображение включающее 90\% исходного). Затем из изображения выделяются шесть локальных участков (изображения включающие около 15\% исходного). После этого к каждому набору участок применяются аугментации(например отражение, изменение цветов и так далее) и глобальные участи передаются в учителя, а локальные в ученика.
     \begin{figure}[h]
         \centering
         \includegraphics[width=0.6\textwidth]{multicrop_augment.png}
         \caption{Пример multicrop augmentation}
         \label{fig:multicrop_augment}
     \end{figure}
-    \par Так же в loss функции используется техника заострения(Sharpening), которая делает выходное вероятностное распределениие более пиковым, уменьшая энтропию и подчеркивая наиболее вероятные классы. Это помогает избежать тривиальных решений, когда модель вырождается  и предсказывает равномерное распределение для всех входов. Sharpening выглядит как Softmax с параметром $\tau$.
+    \par Так же в loss функции используется техника заострения(Sharpening), которая делает выходное вероятностное распределение более пиковым, уменьшая энтропию и подчеркивая наиболее вероятные классы. Это помогает избежать тривиальных решений, когда модель вырождается  и предсказывает равномерное распределение для всех входов. Sharpening выглядит как Softmax с параметром $\tau$.
     \begin{equation}
         \label{sharpening}
         P(x)^{(i)} = \frac{exp\Big(\frac{g_\theta(x)^{(i)}}{\tau}\Big)}{\Sigma^K_{k=1}exp\Big(\frac{g_\theta(x)^{(k)}}{\tau}\Big)}
