--- a/subfiles/part_1/study_with_teacher.tex
+++ b/subfiles/part_1/study_with_teacher.tex
@@ -3,10 +3,10 @@
 \begin{document}
 \subsubsection{Обучение с учителем} % Обучение с учителем
     \label{sec:with_teacher}
-    \par Обучение с учителем -- это вид машинного обучения, при котором модель обучается на примерах, где для каждого входного объекта известен правильный ответ. Цель такого метода обучения -- построение модели которая будет способна предсказать ответ для ранее не встречавшихся примеров с заданой точностью.
+    \par Обучение с учителем -- это вид машинного обучения, при котором модель обучается на примерах, где для каждого входного объекта известен правильный ответ. Цель такого метода обучения -- построение модели которая будет способна предсказать ответ для ранее не встречавшихся примеров с заданной точностью.
     \par Основное преимущество обучения с учителем:
     \begin{itemize}
-        \item \textit{Интерпретируемость} -- модель работает с зарание определенным пространством выходных значений, так как разметка чаще составляется человеком.
+        \item \textit{Интерпретируемость} -- модель работает с заранее определенным пространством выходных значений, так как разметка чаще составляется человеком.
         \item \textit{Интуитивная оценка качества} -- для оценки часто используется интуитивно понятные метрики такие как точность или средний квадрат ошибки. 
     \end{itemize}
     \par Основные недостатки обучения с учителем:
@@ -14,7 +14,7 @@
         \item \textit{Зависимость от качества входных данных} -- эффективность модели напрямую определяется качеством размеченных данных, процесс создания которых требует значительных временных и трудозатрат. Для сложных задач объём требуемых данных может возрастать экспоненциально, что создаёт существенные практические ограничения.
         \item \textit{Проблема переобучения} -- существует риск избыточной подгонки модели под особенности обучающей выборки -- в таком случае алгоритм начинает воспроизводить не только значимые закономерности, но и случайные шумы, что резко снижает его способность к обобщению на новых данных.
     \end{itemize}
-    \par Пример модлей которые обучаются с помощью обучения с учителем:
+    \par Пример моделей которые обучаются с помощью обучения с учителем:
     \begin{itemize}
         \item Линейная регрессия
         \item Дерево решений
