--- a/subfiles/part_1/study_without_teacher.tex
+++ b/subfiles/part_1/study_without_teacher.tex
@@ -1,8 +1,9 @@
 \documentclass[../part_1.tex]{subfiles}
 
 \begin{document}
-\subsubsection{Обучение без учителя} % Обучение без учителем
+\subsubsection{Обучение без учителя} 
     \label{sec:without_teacher}
+    % TODO переписать предложение
     \par Обучение без учителя --  это вид машинного обучения, при котором модель обучается на примерах для которых нет какой-либо разметки. Цель такого метода обучения -- построение модели которая сама будет находить закономерности, не опираясь на внешние подсказки. 
     \par Задачи обучения без учителя включают в себя:
     \begin{itemize}
@@ -11,17 +12,17 @@
         \item \textit{Поиск ассоциативных правил} -- задача выявления устойчивых взаимосвязей между событиями в больших данных.
         \item \textit{Генеративные модели} -- задача генерации новых данных похожих на тренировочные.
     \end{itemize}
-    \par Основное преимущество обучения без учителем:
+    \par Основное преимущество обучения без учителя:
     \begin{itemize}
         \item \textit{Не требуется разметка данных} -- работа с неразмеченными данными значительно облегчает процесс сбора данных.
-        \item \textbf{Гибкость и универсальность} -- применимо в разнообразных областях, а так же может использоваться для предобработки данных перед обучением с учителем
+        \item \textit{Гибкость и универсальность} -- применимо в разнообразных областях, а так же может использоваться для предобработки данных перед обучением с учителем
     \end{itemize}
-    \par Основные недостатки обучения без учителем:
+    \par Основные недостатки обучения без учителя:
     \begin{itemize}
-        \item \textit{Сложность оценки качества} -- отсутсвие разметки затрудняет объективную оценку результатов.
+        \item \textit{Сложность оценки качества} -- отсутствие разметки затрудняет объективную оценку результатов.
         \item \textit{Проблема интерпретируемости} -- так как пространство выходных значений не известно, сложно их интерпретировать. 
     \end{itemize}
-    \par Пример модлей которые обучаются с помощью обучения с учителем:
+    \par Пример моделей которые обучаются с помощью обучения с учителем:
     \begin{itemize}
         \item К средних
         \item Генеративные состязательные сети
