--- a/subfiles/part_2/requierments.tex
+++ b/subfiles/part_2/requierments.tex
@@ -4,12 +4,12 @@
 \subsection{Требования к аппаратному обеспечению}
 \par Для обучения нейронной сети требуется:
 \begin{enumerate}
-    \item Графический процессор (GPU) с высокой производительностью и тензерными ядрами. Рекомендуется использовать GPU от Nvidia не менее чем с 16 ГБ видеопамяти. Меньший объем памяти может существенно увеличить необходимое время для обучения модели.
+    \item Графический процессор (GPU) с высокой производительностью и тензорными ядрами. Рекомендуется использовать GPU от Nvidia не менее чем с 16 ГБ видеопамяти. Меньший объем памяти может существенно увеличить необходимое время для обучения модели.
     \item Хранилище данных которое обеспечит высокую скорость доступа к файлам. Рекомендуется использовать SSD.
     \item Оперативная память для хранения датасета. Рекомендуется 16 ГБ.
 \end{enumerate}
 \par Так же можно увеличить количество графических процессоров, так как код позволяет обучать модель на нескольких GPU одновременно.
-\subsection{Требование к програмному обеспечению}
+\subsection{Требование к программному обеспечению}
 \par Для обучения нейронной сети требуется:
 \begin{enumerate}
     \item Операционная система на базе Linux, в связи с тем что libuv не может работать на Windows.
@@ -17,7 +17,7 @@
     \item Библиотека глубокого обучения PyTorch
     \item Библиотека машинного обучения Scikit Learn
     \item Среда разработки: Pycharm, VSCode, Jupyter Notebook
-    \item Паралельная вычислительная платформа и программный интерфейс CUDA
+    \item Параллельная вычислительная платформа и программный интерфейс CUDA
 \end{enumerate}
 \par Важно убедиться что программные средства совместимы между собой.
 \end{document}
