--- a/subfiles/part_3/training.tex
+++ b/subfiles/part_3/training.tex
@@ -21,6 +21,6 @@
     \item epochs -- количество эпох обучения. Изначально равно 100.
     \item local\_crops\_number -- количество локальных участков на одно наблюдение. Изначально равно 8.
 \end{itemize}
-\par Для запуска был использован персональный компьютер с ОС Ubuntu, GPU Nvidia 3090 с 16гб видеопамяти, и 256 гигобайтами оперативной памяти. При этом, со всеми выставлеными настройками было занято 14 из 16 гигобайт видеопамяти.
-\par Весь процесс обучения занял 25 часов. Результатом работы был файл checkpoint.pth, в котором находились веса модели учителя и ученика, а так же данне из конфигурации процесса обучения.
+\par Для запуска был использован персональный компьютер с ОС Ubuntu, GPU Nvidia 3090 с 16гб видеопамяти, и 256 гигабайтами оперативной памяти. При этом, со всеми выставленными настройками было занято 14 из 16 гигабайт видеопамяти.
+\par Весь процесс обучения занял 25 часов. Результатом работы был файл checkpoint.pth, в котором находились веса модели учителя и ученика, а так же данные из конфигурации процесса обучения.
 \end{document}
