--- a/subfiles/part_1.tex
+++ b/subfiles/part_1.tex
@@ -5,7 +5,7 @@
     \section{Описание предметной области}
     \subsection{Машинное обучение}
     \par \acrfull{ml} -- это раздел искусственного интеллекта, изучающий методы построения алгоритмов, способных автоматически обучаться и улучшать свою работу на основе данных без явного программирования. В отличие от традиционных алгоритмов, где поведение системы жестко задаётся разработчиком, модели машинного обучения выявляют закономерности в данных и используют их для прогнозирования, классификации или принятия решений
-    \par Результат обучения алгоритма называется моделью -- параметризированное отражение(функция), которое преобразует объекты из пространства входных признаков в пространство предсказаний. 
+    \par Результат обучения алгоритма называется моделью -- параметризованное отражение(функция), которое преобразует объекты из пространства входных признаков в пространство предсказаний. 
     \par Одним из главных требований к модели -- ее способность к обобщению. Благодаря этому модель не просто запомнит данные на которых училась, а находит в них закономерности, что позволяет более точно делать отражение на новых объектах.
     \par Алгоритмы \acrshort{ml} делятся на три основные категории:
     \begin{itemize}
