--- a/subfiles/part_1/reinforcement_learning.tex
+++ b/subfiles/part_1/reinforcement_learning.tex
@@ -3,8 +3,9 @@
 \begin{document}
 \subsubsection{Обучение с подкреплением} % Обучение с уподкреплением
     \label{sec:reinforcement_learning}
+    %  TODO переписать предложение
     \par Обучение с подкреплением --  это вид машинного обучения, при котором агент(модель) обучается на основе опыта взаимодействия со средой, принимая решения которые максимизируют награду.
-    \par В отличии от прошлых методов, агенты ориентированы на последовательное принятие решений в условиях неопредленности.
+    \par В отличие от прошлых методов, агенты ориентированы на последовательное принятие решений в условиях неопредленности.
     \par Основное преимущество обучения с подкреплением:
     \begin{itemize}
         \item \textit{Подходит для задач с отложенной наградой} -- Может учитывать долгосрочные последствия действий, а не только мгновенную выгоду.
@@ -15,7 +16,7 @@
         \item \textit{Высокие вычислительные затраты} -- Требует миллионов (иногда миллиардов) попыток для обучения.
         \item \textit{Проблема исследования-эксплуатации} -- Агент должен балансировать между исследованием и эксплуатацией. Исследование -- проба новых действий, для поиска лучшей стратегии. Эксплуатация -- использование уже известных лучших действий.
     \end{itemize}
-    \par Пример модлей которые обучаются с помощью обучения с учителем:
+    \par Пример моделей которые обучаются с помощью обучения с учителем:
     \begin{itemize}
         \item К средних
         \item Генеративные состязательные сети
