--- a/subfiles/part_2/main.tex
+++ b/subfiles/part_2/main.tex
@@ -2,7 +2,7 @@
 
 \begin{document}
     \subsection{Алгоритм обучения}
-    \par Для обучения было решено модернизировать алгортм dino для работы с текстом.
+    \par Для обучения было решено модернизировать алгоритм dino для работы с текстом.
     \par Для этого было необходимо сделать
     \begin{itemize}
         \item Переработать модель из ViT в Transformer
@@ -17,7 +17,7 @@
         \caption{Архитектура нейросети}
         \label{fig:model_arc}
     \end{figure}
-    \par Для изменения линейного преобразования был использован Embedding слой, котрый каждому токену присваивает свой вектор представления.
+    \par Для изменения линейного преобразования был использован Embedding слой, который каждому токену присваивает свой вектор представления.
     \begin{figure}[H]
         \centering
         \includegraphics[height=0.6\textwidth]{nn_block.png}
@@ -25,7 +25,7 @@
         \label{fig:nn_block}
     \end{figure}
     \par Блок состоит из слоя нормирования, внимания, dropout, еще раз нормирования и MLP. Из них самым полезным и ресурсозатратным является слой внимания. Его вычисление зависит от квадрата числа токенов в последовательности.
-    \par Так как изначальное изображение было размером $224\times224$, то в Vit моделе было всего 196 токенов. В текстовой же реализации токенов значительно больше.
+    \par Так как изначальное изображение было размером $224\times224$, то в Vit модели было всего 196 токенов. В текстовой же реализации токенов значительно больше.
     \begin{figure}[H]
         \centering
         \includegraphics[width=0.6\textwidth]{tok_len_hist.png}
@@ -33,20 +33,21 @@
         \label{fig:tok_len_hist}
     \end{figure}
     \par Из рисунка \ref{fig:tok_len_hist} видно что оптимальным количеством токенов для рассмотрения будет 1000, что в 5 раз больше привычного количества токенов у блока. Соответственно вычисление attention становится медленнее в 25 раз.
-    \par В связи с неэффективностью стандартного attention слоя, было решено использовать встроеный в PyTorch FalshAttention\cite{dao2022flashattentionfastmemoryefficientexact}. Таким образом удалось существенно увеличить скорость работы и уменьшить потребление памяти.
+    \par В связи с неэффективностью стандартного attention слоя, было решено использовать встроенный в PyTorch FalshAttention\cite{dao2022flashattentionfastmemoryefficientexact}. Таким образом удалось существенно увеличить скорость работы и уменьшить потребление памяти.
     \par После этих изменений модель смогла работать с большими последовательностями токенов.
 
     \subsubsection{Multcirop augmentation}
-    \par В изначальной реализации участки выбирались случайным наложением границ на изображение. Для текта программ это не совсем подходит.
+    \par В изначальной реализации участки выбирались случайным наложением границ на изображение. Для текста программ это не совсем подходит.
     \par Было предложено 3 основных способа как делать код на блоки:
     \begin{itemize}
         \item Блоки отделяются по токенам
-        \item Блоки делятся по строкам кода - так как конец строки это конец вырожения
-        \item Блоки делятся по ветвям синтаксического дерева - таким образом участок кода будет оконченым с точки зрения логики
+        \item Блоки делятся по строкам кода - так как конец строки это конец выражения
+        \item Блоки делятся по ветвям синтаксического дерева - таким образом участок кода будет оконченным с точки зрения логики
     \end{itemize}
     \par Наилучшим из предложенных вариантов кажется разделение по ветвям синтаксического дерева, таким образом получится в качестве локальных участков брать завершенные логически блоки.
     \par В конечной реализации было решено использовать разделение блоков по токенам, таким образом получится больше уникальных блоков, что на небольшом датасете наборе данных, что значительно увеличит разнообразие в данных.
-    \par После опредления разделения, был реализован класс MulticropAugmentations, который на вход получает объект класса, который определяет как данные будут делиться на участки, и так же был реализован класс \_Separate\_by\_tokens, который во время вызова получает список количеств токенов, которые нужно выбрать случайным образом.
+    % TODO переформулировать который
+    \par После определения разделения, был реализован класс MulticropAugmentations, который на вход получает объект класса, который определяет как данные будут делиться на участки, и так же был реализован класс \_Separate\_by\_tokens, который во время вызова получает список количеств токенов, которые нужно выбрать случайным образом.
     \subsubsection{Аугментация данных}
     \par Аугментация текстовых данных -- не тривиальный процесс. Существует несколько основных подходов.
     \begin{itemize}
@@ -56,5 +57,5 @@
     \end{itemize}
     \par В конкретном случае в связи с тем что данные являются кодом на языке C, то синтаксические методы не подойдут из-за невозможности определения поведения методов и функций. Семантические методы не подходят из-за специфики данных. А методы на основе шума не подходят из-за того что такие ошибки чаще всего отметаются спелчекермо из современных IDE.
 
-    \par После опредления необходимых аугментаций все остальные были удалены.
+    \par После определения необходимых аугментаций все остальные были удалены.
 \end{document}
