--- a/subfiles/part_3/comparison.tex
+++ b/subfiles/part_3/comparison.tex
@@ -3,10 +3,10 @@
 \begin{document}
 \subsection{Сравнение моделей}
 \par Сравнение было решено провести с моделями CodeBert и UnixCoder, так как они считаются лучшими на данный момент.
-\par Изначально весь выбранный датасет был пропущен через модели DinoNLP, CodeBert и UnixCoder, а полученные вектора сохранены в numpy файлы.
-\par В качетсве базового решения (baseline) был использован наивный баесовский классификатор(Naive Bayes Classifier). Наивный байесовский классификатор был выбран в качестве baseline-модели, поскольку он является классическим методом машинного обучения, широко применяемым для задач обработки текстовых данных.  
+\par Изначально весь выбраный датасет был пропущен через модели DinoNLP, CodeBert и UnixCoder, а полученные вектора сохранены в numpy файлы.
+\par В качестве базового решения (baseline) был использован наивный баесовский классификатор(Naive Bayes Classifier). Наивный байесовский классификатор был выбран в качестве baseline-модели, поскольку он является классическим методом машинного обучения, широко применяемым для задач обработки текстовых данных.  
 \subsubsection{Классификация номера задания}
-\par Было выбранно 48 заданий из набора данных от IBM в которых больше всего принятых решений. Размер тренировочного набора - 65059. Размер тестового набора - 16265. После этого было решено использовать KNN калссификатор и MLP классификатор предсказания номера задачи.
+\par Было выбрано 48 заданий из набора данных от IBM в которых больше всего принятых решений. Размер тренировочного набора - 65059. Размер тестового набора - 16265. После этого было решено использовать KNN классификатор и MLP классификатор предсказания номера задачи.
 \par Для KNN был выставлен параметр - 10 ближайших соседей.
 \par MLP имело 11 слоев, с функциями активации ReLU.
 \begin{table}[H]
@@ -18,9 +18,9 @@
     \end{tabular}  
     \caption{Точность в процентах решения задачи определения номера задания}
 \end{table}
-\par Решение при помощи модели DinoNLP значительно выше чем baseline, не уступает решению модели использующей представления модели CodeBert и хуже чем UnixCoder.
+\par Решение при помощи модели DinoNLP значительно выше чем baseline, не уступает решению модели использующей представления модели CodeBert и хуже, чем UnixCoder.
 \subsubsection{Классификация статуса задачи}
-\par Из прошлого набора данных было выбранно одно задание в котором было больше всего примеров. В качестве целевой переменной было выбранно булевое значение, равен ли задача принятой. 
+\par Из прошлого набора данных было выбрано одно задание в котором было больше всего примеров. В качестве целевой переменной было выбрано булевое значение, равен ли задача принятой. 
 \par Размер тренировочного набора - 7838, из них 44\% приняты. Размер тестового набора - 1960, из них 44\% приняты. 
 \begin{table}[H]
     \centering
@@ -31,5 +31,5 @@
     \end{tabular}    
     \caption{Точность в процентах решения задачи определения статуса решения}
 \end{table}
-\par Решение при помощи модели DinoNLP значительно выше чем baseline, в некоторых случаях уступает решению модели использующей представления модели CodeBert и хуже чем UnixCoder.
+\par Решение при помощи модели DinoNLP значительно выше чем baseline, в некоторых случаях уступает решению модели использующей представления модели CodeBert и хуже, чем UnixCoder.
 \end{document}
